Revert " - first fixes"
This reverts commit 618babba4702faa55069e1867b1503f2fe8e9b90.

Reason: Commit used tabs instead spaces. Changes are implemented in second
commit.